--- a/_publications/IET2025.md
+++ b/_publications/IET2025.md
@@ -8,3 +8,5 @@ excerpt: 'Junkai Hou, Chunpeng Lu, Hanbin Guo, Yuan He*'
 paperurl: 'https://JunkaiHou.github.io/files/Paper_Junkai_Hou.pdf'
 citation: 'Junkai Hou, Chunpeng Lu, Hanbin Guo, Yuan He*. &quot; Mimicking Bats'' Echolocation: A Biomimetic Approach for Indoor Human Target Detection.&quot; <i>IET Interntional Radar Conference 2025</i>. '
 ---
+
+[View Project Here](https://github.com/JunkaiHou/RadarClutterSuppression)
