--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,14 +1,13 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "北京邮电大学2026校园招聘启动仪式  The launch ceremony of Beijing University of Posts and Telecommunications' 2026 Campus Recruitment"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley, CA, USA"
+venue: "Beijing University of Posts and Telecommunications"
+date: 2025-09-19
+location: "Beijing, China"
 ---
 
-[More information here](http://exampleurl.com)
+[More information here](https://JunkaiHou.github.io/images/1.jpg)
 
-https://JunkaiHou.github.io/images/1.jpg
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+
