--- a/_talks/20250919.md
+++ b/_talks/20250919.md
@@ -2,7 +2,7 @@
 title: "北京邮电大学2026校园招聘启动仪式  The launch ceremony of Beijing University of Posts and Telecommunications' 2026 Campus Recruitment"
 collection: talks
 type: "Tutorial"
-permalink: /talks/2013-03-01-tutorial-1
+permalink: /talks/20250919
 venue: "Beijing University of Posts and Telecommunications"
 date: 2025-09-19
 location: "Beijing, China"
