--- a/_talks/20250919.md
+++ b/_talks/20250919.md
@@ -1,7 +1,7 @@
 ---
-title: "北京邮电大学2026校园招聘启动仪式  The launch ceremony of Beijing University of Posts and Telecommunications' 2026 Campus Recruitment"
+title: "北京邮电大学2026校园招聘启动仪式          The launch ceremony of Beijing University of Posts and Telecommunications' 2026 Campus Recruitment"
 collection: talks
-type: "Tutorial"
+type: "Talk"
 permalink: /talks/20250919
 venue: "Beijing University of Posts and Telecommunications"
 date: 2025-09-19
